--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/capture"
-    tools:context=".MainActivity">
+    tools:context=".Juristic">
 
     <Button
         android:id="@+id/button2"
@@ -14,6 +14,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="136dp"
         android:text="Deplace le ROBOT"
+        android:onClick="droite"
         app:iconTint="#A7CC9D"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
@@ -30,6 +31,7 @@
         android:clickable="false"
         android:soundEffectsEnabled="true"
         android:tint="#FBFBFB"
+        android:onClick="exit"
         app:backgroundTint="#F6F3F3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +74,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="612dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="256dp"
         android:clickable="true"
+        android:onClick="haut"
         app:backgroundTint="#3F51B5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -87,6 +90,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:rotation="-90"
+        android:onClick="gauche"
         app:backgroundTint="#66DA6B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +108,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:rotation="90"
+        android:onClick="droite"
         app:backgroundTint="#DFA858"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +130,7 @@
         android:layout_marginBottom="64dp"
         android:clickable="true"
         android:rotation="180"
+        android:onClick="bas"
         app:backgroundTint="#E3645B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
